added lazy loading in all links

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
   <nav class="bg-[#4E4FEB] border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="https://bcomify.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="/src/assets/icon.png" class="h-8" alt="Bco" />
+        <img loading="lazy"src="/src/assets/icon.png" class="h-8" alt="Bco" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap      ">BCOMIFY</span>
       </a>
       <button data-collapse-toggle="navbar-default" type="button"
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="banner-slider ">
-        <img src="https://www.expertvillagemedia.com//sites-files/assets/images/homebanner.png" alt="image_bcomify"
+        <img loading="lazy"loading="lazy" src="https://www.expertvillagemedia.com//sites-files/assets/images/homebanner.png" alt="image_bcomify"
           class="transform translate-x-0 translate-y-0 translate-z-0" />
       </div>
     </div>
@@ -206,22 +206,22 @@
               <ul x-ref="logos"
                 class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll">
                 <li>
-                  <img src="./assets/brands/ALIEXPRESS.BZ.png" class="" alt="Aliexpressbz" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/ALIEXPRESS.BZ.png" class="" alt="Aliexpressbz" />
                 </li>
                 <li>
-                  <img src="./assets/brands/Amazoline.png" alt="amazoline" class="" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/Amazoline.png" alt="amazoline" class="" />
                 </li>
                 <li>
-                  <img src="./assets/brands/bringo.jpg" alt="bringo" class="" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/bringo.jpg" alt="bringo" class="" />
                 </li>
                 <li>
-                  <img src="./assets/brands/glamfull_1.jpg" class="" alt="glamfull" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/glamfull_1.jpg" class="" alt="glamfull" />
                 </li>
                 <li>
-                  <img src="./assets/brands/MUSICAL BOXING.png" class="" alt="musicalboxing" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/MUSICAL BOXING.png" class="" alt="musicalboxing" />
                 </li>
                 <li>
-                  <img src="./assets/brands/pinsy.png" class="" alt="pinsy" />
+                  <img loading="lazy"loading="lazy"src="./assets/brands/pinsy.png" class="" alt="pinsy" />
                 </li>
               </ul>
             </div>
@@ -245,7 +245,7 @@
       <div class="our-works grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img src="./assets/brands/NUELIT™.png" alt="Nuelit" /></a>
+            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/NUELIT™.png" alt="Nuelit" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for Wooden Glow Torch
@@ -255,12 +255,12 @@
             they were designed to not only illuminate the room but also create a captivating ambiance. As a result,
             Nuelit's lights became a staple in high-end hotels, boutique stores, and stylish homes around the world.
           </p>
-          <img src="./assets/works/neulit.png" alt="Nuelit" />
+          <img loading="lazy"loading="lazy"src="./assets/works/neulit.png" alt="Nuelit" />
         </div>
 
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img src="./assets/brands/glamfull_1.jpg" alt="Glamfull" /></a>
+            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/glamfull_1.jpg" alt="Glamfull" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for Valentines Gifts
@@ -271,11 +271,11 @@
             celebrating a long-lasting relationship, a new romance, or even a cherished friendship, our curated
             collection of gifts is sure to make your Valentine's Day memorable
           </p>
-          <img src="./assets/works/glamful_sm.png" alt="" />
+          <img loading="lazy"loading="lazy"src="./assets/works/glamful_sm.png" alt="" />
         </div>
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img src="./assets/brands/bringo.jpg" alt="Orinoco" /></a>
+            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/bringo.jpg" alt="Orinoco" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for a Valentine's Gifts
@@ -284,11 +284,11 @@
             Redefine your living experience and let your home tell your unique story with our carefully curated pieces.
             Welcome to a world where your style finds its perfect home.
           </p>
-          <img src="./assets/works/orinocoshopping_sm.png" alt="" />
+          <img loading="lazy"loading="lazy"src="./assets/works/orinocoshopping_sm.png" alt="" />
         </div>
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img src="./assets/brands/MUSICAL BOXING.png"
+            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/MUSICAL BOXING.png"
                 alt="musicalboxing" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
@@ -298,7 +298,7 @@
             Welcome to the MusicalBoxing Combining music with boxing , Traditional boxing training is often monotonous ,
             but this product combines music with boxing, making the fitness process more fun and easier to stick to.
           </p>
-          <img src="./assets/works/musicalboxing.png" alt="" />
+          <img loading="lazy"loading="lazy"src="./assets/works/musicalboxing.png" alt="" />
         </div>
       </div>
       <div class="text-center">
@@ -319,7 +319,7 @@
         <div class="service-box border-2 rounded-[25px] p-3 border-gray-600 max-w-64">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/pencil-cross-svgrepo-com (2).svg" alt="pencile_svg" class="w-9" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/pencil-cross-svgrepo-com (2).svg" alt="pencile_svg" class="w-9" />
             </div>
             <h4 class="text-3xl font-semibold my-2 text-center">
               Shopify store design and development
@@ -334,7 +334,7 @@
         <div class="service-box border-2 rounded-[25px] p-3 border-gray-600 max-w-64">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/refresh.svg" alt="refresh" class="w-10" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/refresh.svg" alt="refresh" class="w-10" />
             </div>
             <h4 class="text-3xl font-semibold my-2 text-center">
               Website Redesign
@@ -348,7 +348,7 @@
         <div class="service-box border-2 rounded-[25px] p-3  border-gray-600 text-center max-w-64">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/move-up-svgrepo-com.svg" alt="migration_icon" class="w-10" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/move-up-svgrepo-com.svg" alt="migration_icon" class="w-10" />
             </div>
             <h4 class="text-3xl font-semibold my-2 ">
               Store Migration
@@ -363,7 +363,7 @@
         <div class="service-box border-2 border-gray-600 rounded-[25px] px-6 p-3 max-w-64 text-center">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/maintenance-warning-svgrepo-com.svg" alt="maintenance" class="w-10" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/maintenance-warning-svgrepo-com.svg" alt="maintenance" class="w-10" />
             </div>
             <h4 class="text-3xl font-semibold my-2 ">
               Store Maintenance
@@ -378,7 +378,7 @@
         <div class="service-box border-2 rounded-[25px] p-3 border-gray-600 max-w-64 text-center">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/marketing-svgrepo-com.svg" alt="marketing" class="w-9" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/marketing-svgrepo-com.svg" alt="marketing" class="w-9" />
             </div>
             <h4 class="text-3xl font-semibold my-2">
               Digital Marketing Services
@@ -393,7 +393,7 @@
         <div class="service-box border-2 rounded-[25px] p-3 border-gray-600 max-w-64 text-center">
           <div class="box flex flex-col items-center">
             <div class="image-sp-1 my-5">
-              <img src="./assets/services_vectors/search-loaction-svgrepo-com.svg" alt="marketing" class="w-12" />
+              <img loading="lazy"loading="lazy"src="./assets/services_vectors/search-loaction-svgrepo-com.svg" alt="marketing" class="w-12" />
             </div>
             <h4 class="text-3xl font-semibold my-2">
               Product Hunting Services
@@ -410,9 +410,9 @@
   </section>
   <!-- <section class="trust-bages grid place-items-center  my-40">
     <div class="container flex flex-row justify-center items-center w-fit gap-5">
-      <img src="./assets/trust_bages/lock.png" class=" w-52 m-5" alt="">
-      <img src="./assets/trust_bages/primium.png" class=" w-52 m-5" alt="">
-      <img src="./assets/trust_bages/second.png" class="w-52  m-5" alt="">
+      <img loading="lazy"loading="lazy"src="./assets/trust_bages/lock.png" class=" w-52 m-5" alt="">
+      <img loading="lazy"loading="lazy"src="./assets/trust_bages/primium.png" class=" w-52 m-5" alt="">
+      <img loading="lazy"loading="lazy"src="./assets/trust_bages/second.png" class="w-52  m-5" alt="">
     </div>
   </section> -->
   
@@ -536,7 +536,7 @@
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
         <a href="https://www.bcomify.com/"
           class="flex title-font font-medium items-center md:justify-center justify-center ">
-          <img src="./assets/icon_long.png" alt="bcomify_logo ">
+          <img loading="lazy"src="./assets/icon_long.png" alt="bcomify_logo ">
 
         </a>
         <p class="mt-2 text-sm text-gray-50">The Shopify Experts</p>
