--- a/src/work.html
+++ b/src/work.html
@@ -22,7 +22,7 @@
     <nav class="bg-[#4E4FEB] border-gray-200 dark:bg-gray-900">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://bcomify.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="/src/assets/icon.png" class="h-8" alt="Bco" />
+          <img loading="lazy"src="/src/assets/icon.png" class="h-8" alt="Bco" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap      ">BCOMIFY</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button"
@@ -67,7 +67,7 @@
       >
         <div class="relative group">
           <a href="https://glamfull.store/">
-            <img
+           <img loading="lazy"
               src="./assets/works/glamful_sm.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -82,7 +82,7 @@
 
         <div class="relative group">
           <a href="https://nuelit.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/neulit.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -97,7 +97,7 @@
 
         <div class="relative group">
           <a href="https://orinocoshopping.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/orinocoshopping_sm.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -112,7 +112,7 @@
 
         <div class="relative group">
           <a href="https://musicalboxing.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/musicalboxing.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -128,7 +128,7 @@
         
         <div class="relative group">
           <a href="https://gfuel.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/gfuel.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -144,7 +144,7 @@
 
         <div class="relative group">
           <a href="https://ipollo.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/ipollo.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -160,7 +160,7 @@
 
         <div class="relative group">
           <a href="https://modedesigns.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/modedesigns.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -176,7 +176,7 @@
 
         <div class="relative group">
           <a href="https://smartqat.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/smartqat.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -192,7 +192,7 @@
 
         <div class="relative group">
           <a href="https://allbirds.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.allbirds.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -208,7 +208,7 @@
         
         <div class="relative group">
           <a href="https://goatguns.com/">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.goatguns.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -224,7 +224,7 @@
 
         <div class="relative group">
           <a href="https://spigen.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.spigen.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -240,7 +240,7 @@
 
         <div class="relative group">
           <a href="https://starskin.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.starskin.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -255,7 +255,7 @@
 
         <div class="relative group">
           <a href="https://starskin.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.starskin.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -270,7 +270,7 @@
 
         <div class="relative group">
           <a href="https://heul.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/huel.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -285,7 +285,7 @@
 
         <div class="relative group">
           <a href="https://louisck.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/louisck.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -300,7 +300,7 @@
 
         <div class="relative group">
           <a href="https://gamestop.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.gamestop.com_.png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -315,7 +315,7 @@
 
         <div class="relative group">
           <a href="https://gloriousgaming.com">
-            <img
+           <img loading="lazy"
               src="./assets/works/www.gloriousgaming.com_ (1).png"
               alt="Description"
               class="group-hover:opacity-50 transition-opacity duration-2000 w-full h-full"
@@ -341,7 +341,7 @@
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
           <a href="https://www.bcomify.com/"
             class="flex title-font font-medium items-center md:justify-center justify-center ">
-            <img src="./assets/icon_long.png" alt="bcomify_logo ">
+            <img loading="lazy"src="./assets/icon_long.png" alt="bcomify_logo ">
   
           </a>
           <p class="mt-2 text-sm text-gray-50">The Shopify Experts</p>
