added target blank in all anchor tags

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
       <div class="our-works grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/NUELIT™.png" alt="Nuelit" /></a>
+            <a href="https://nuelit.com/" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/NUELIT™.png" alt="Nuelit" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for Wooden Glow Torch
@@ -260,7 +260,7 @@
 
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/glamfull_1.jpg" alt="Glamfull" /></a>
+            <a href="https://glamfull.store/" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/glamfull_1.jpg" alt="Glamfull" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for Valentines Gifts
@@ -275,7 +275,7 @@
         </div>
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/bringo.jpg" alt="Orinoco" /></a>
+            <a href="https://orinocoshopping.com/" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/bringo.jpg" alt="Orinoco" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
             Shopify store for a Valentine's Gifts
@@ -288,7 +288,7 @@
         </div>
         <div class="our-work border-2 rounded-[25px] flex flex-col p-5 m-5">
           <div class="logo">
-            <a href="" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/MUSICAL BOXING.png"
+            <a href="https://musicalboxing.com/" target="_blank" rel="nofollow"><img loading="lazy"loading="lazy"src="./assets/brands/MUSICAL BOXING.png"
                 alt="musicalboxing" /></a>
           </div>
           <h3 class="text-4xl my-5 font-bold">
