--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="banner-slider ">
-        <img loading="lazy"loading="lazy" src="https://www.expertvillagemedia.com//sites-files/assets/images/homebanner.png" alt="image_bcomify"
+        <img loading="lazy"loading="lazy" src="./assets/works/homebanner.png" alt="image_bcomify"
           class="transform translate-x-0 translate-y-0 translate-z-0" />
       </div>
     </div>
