--- a/src/work.html
+++ b/src/work.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://unpkg.com/tailwindcss-jit-cdn"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-    ></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
+  
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <meta
       name="description"
       content="See our works and projects we have done since we started"
@@ -19,15 +18,14 @@
     <title>Bcomify | Our Works</title>
   </head>
   <body class="bg-black text-white">
-    <nav class="bg-[#4E4FEB] border-gray-200 dark:bg-gray-900">
+    <nav class="bg-[#4E4FEB] border-gray-200 ">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://bcomify.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img loading="lazy"src="/src/assets/icon.png" class="h-8" alt="Bco" />
+          <img loading="lazy" src=" /assets/icon.png" class="h-8" alt="Bco" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap      ">BCOMIFY</span>
         </a>
-        <button data-collapse-toggle="navbar-default" type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400         dark:focus:ring-gray-600"
-          aria-controls="navbar-default" aria-expanded="false">
+        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white ring-2 ring-gray-200 focus:text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+  
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -39,21 +37,21 @@
             class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0  text-white ">
   
             <li>
-              <a href="/src/about.html"
-                class="block py-2 px-3     rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">About</a>
+              <a href=" /about.html"
+                class="block py-2 px-3 hover:text-black rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  ">About</a>
             </li>
             <li>
-              <a href="/src/work.html"
-                class="block py-2 px-3     rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Our
+              <a href=" /work.html"
+                class="block py-2 px-3  hover:text-black   rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Our
                 Works</a>
             </li>
             <li>
-              <a href="/src/pricings.html"
-                class="block py-2 px-3     rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Pricing</a>
+              <a href=" /pricings.html"
+                class="block py-2 px-3   hover:text-black  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Pricing</a>
             </li>
             <li>
-              <a href="/src/contact.html"
-                class="block py-2 px-3     rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Contact</a>
+              <a href=" /contact.html"
+                class="block py-2 px-3   hover:text-black  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0      md:p-0                                        ">Contact</a>
             </li>
           </ul>
         </div>
@@ -353,16 +351,16 @@
             <nav class="list-none mb-10">
   
               <li>
-                <a href="/src/contact.html" class="text-gray-200 hover:text-white">Contact Us</a>
+                <a href="  /contact.html" class="text-gray-200 hover:text-white">Contact Us</a>
               </li>
               <li>
-                <a href="/src/about.html" class="text-gray-200 hover:text-white">About Us</a>
+                <a href="  /about.html" class="text-gray-200 hover:text-white">About Us</a>
               </li>
               <li>
-                <a href="/src/work.html" class="text-gray-200 hover:text-white">Works</a>
+                <a href="  /work.html" class="text-gray-200 hover:text-white">Works</a>
               </li>
               <li>
-                <a href="/src/pricings.html" class="text-gray-200 hover:text-white">Pricings</a>
+                <a href="  /pricings.html" class="text-gray-200 hover:text-white">Pricings</a>
               </li>
   
             </nav>
@@ -373,13 +371,13 @@
             <nav class="list-none mb-10">
   
               <li>
-                <a href="/src/privacy_policy.html" class="text-gray-200 hover:text-white">Privacy Policy</a>
+                <a href="  /privacy_policy.html" class="text-gray-200 hover:text-white">Privacy Policy</a>
               </li>
               <li>
-                <a href="/src/tandc.html" class="text-gray-200 hover:text-white">Term and Conditions</a>
+                <a href="  /tandc.html" class="text-gray-200 hover:text-white">Term and Conditions</a>
               </li>
               <li>
-                <a href="/src/credits.html" class="text-gray-200 hover:text-white">Attributions</a>
+                <a href="  /credits.html" class="text-gray-200 hover:text-white">Attributions</a>
               </li>
   
             </nav>
@@ -393,7 +391,7 @@
       </div>
     </footer>
   
-        
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script> 
   
   </body>
 </html>
