addded missing scripti

--- a/src/about.html
+++ b/src/about.html
@@ -180,6 +180,7 @@
       </div> -->
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
 </body>
 
